--- a/index.html
+++ b/index.html
@@ -313,69 +313,24 @@
     <!--/ Carousel end /-->
 
     <!--/ Services Star /-->
+
     <section class="section-services section-t8">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
-                <h2 class="title-a" id="services">Our Services</h2>
+                <h2 class="title-a">Our Services</h2>
               </div>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card-box-c foo">
-              <div class="card-header-c d-flex">
-                <div class="card-box-ico">
-                  <span class="fa fa-gamepad"></span>
-                </div>
-                <div class="card-title-c align-self-center">
-                  <h2 class="title-c">Road Construction</h2>
-                </div>
-              </div>
-              <div class="card-body-c">
-                <p class="content-c">About road constructions</p>
-              </div>
-              <div class="card-footer-c"></div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card-box-c foo">
-              <div class="card-header-c d-flex">
-                <div class="card-box-ico">
-                  <span class="fa fa-usd"></span>
-                </div>
-                <div class="card-title-c align-self-center">
-                  <h2 class="title-c">Bridges</h2>
-                </div>
-              </div>
-              <div class="card-body-c">
-                <p class="content-c">About bridges</p>
-              </div>
-              <div class="card-footer-c"></div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card-box-c foo">
-              <div class="card-header-c d-flex">
-                <div class="card-box-ico">
-                  <span class="fa fa-home"></span>
-                </div>
-                <div class="card-title-c align-self-center">
-                  <h2 class="title-c">Dredging Services</h2>
-                </div>
-              </div>
-              <div class="card-body-c">
-                <p class="content-c">About Dredging services</p>
-              </div>
-              <div class="card-footer-c"></div>
-            </div>
-          </div>
+        <div class="owl-theme">
+          <p>here services</p>
         </div>
       </div>
     </section>
+
     <!--/ Services End /-->
 
     <!--/ Property Star /-->
@@ -414,7 +369,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a">rent | $ 12.000</span>
+                      <span class="price-a">BUY | 20M</span>
                     </div>
                     <a href="#" class="link-a"
                       >Click here to view
@@ -465,7 +420,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a">rent | $ 12.000</span>
+                      <span class="price-a">BUY | 20M</span>
                     </div>
                     <a href="property-single.html" class="link-a"
                       >Click here to view
@@ -516,7 +471,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a">rent | $ 12.000</span>
+                      <span class="price-a">BUY | 20M</span>
                     </div>
                     <a href="property-single.html" class="link-a"
                       >Click here to view
@@ -567,7 +522,7 @@
                   </div>
                   <div class="card-body-a">
                     <div class="price-box d-flex">
-                      <span class="price-a">rent | $ 12.000</span>
+                      <span class="price-a">BUY | 20M</span>
                     </div>
                     <a href="property-single.html" class="link-a"
                       >Click here to view
@@ -688,7 +643,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="img/agent-1.jpg" alt="" class="img-d img-fluid" />
+                <img src="img/aa.jpg" alt="" class="img-d img-fluid" />
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -748,7 +703,7 @@
           <div class="col-md-4">
             <div class="card-box-d">
               <div class="card-img-d">
-                <img src="img/agent-5.jpg" alt="" class="img-d img-fluid" />
+                <img src="img/aa.jpg" alt="" class="img-d img-fluid" />
               </div>
               <div class="card-overlay card-overlay-hover">
                 <div class="card-header-d">
@@ -951,11 +906,6 @@
             <div class="testimonials-box">
               <div class="row">
                 <div class="col-sm-12 col-md-6">
-                  <div class="testimonial-img">
-                    <img src="img/testimonial-1.jpg" alt="" class="img-fluid" />
-                  </div>
-                </div>
-                <div class="col-sm-12 col-md-6">
                   <div class="testimonial-ico">
                     <span class="ion-ios-quote"></span>
                   </div>
@@ -965,14 +915,6 @@
                       Omnis, cupiditate ea nam praesentium debitis hic ber
                       quibusdam voluptatibus officia expedita corpori.
                     </p>
-                  </div>
-                  <div class="testimonial-author-box">
-                    <img
-                      src="img/mini-testimonial-1.jpg"
-                      alt=""
-                      class="testimonial-avatar"
-                    />
-                    <h5 class="testimonial-author">Albert & Erika</h5>
                   </div>
                 </div>
               </div>
@@ -982,11 +924,6 @@
             <div class="testimonials-box">
               <div class="row">
                 <div class="col-sm-12 col-md-6">
-                  <div class="testimonial-img">
-                    <img src="img/testimonial-2.jpg" alt="" class="img-fluid" />
-                  </div>
-                </div>
-                <div class="col-sm-12 col-md-6">
                   <div class="testimonial-ico">
                     <span class="ion-ios-quote"></span>
                   </div>
@@ -996,14 +933,6 @@
                       Omnis, cupiditate ea nam praesentium debitis hic ber
                       quibusdam voluptatibus officia expedita corpori.
                     </p>
-                  </div>
-                  <div class="testimonial-author-box">
-                    <img
-                      src="img/mini-testimonial-2.jpg"
-                      alt=""
-                      class="testimonial-avatar"
-                    />
-                    <h5 class="testimonial-author">Pablo & Emma</h5>
                   </div>
                 </div>
               </div>
